# rustane

./: .gitignore  .pre-commit-config.yaml  ALL_PHASES_COMPLETE.md  ALL_PLANNING_COMPLETE.md  CHANGELOG.md  COLAB_QUICK_START.txt  COLAB_SETUP.md  COMPREHENSIVE_FINAL_REPORT.md  Cargo.toml  FINAL_STATUS_NO_REMAINING_ITEMS.md  FINAL_SUMMARY.md  FINAL_VERIFICATION_ALL_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY_V2.md  INTEGRATION_COMPLETE.md  LOSS_FIX_SUMMARY.md  MLX_MATMUL_COMPARISON.md  PARAMETER_GOLF_ALIGNMENT.md  PHASE4_COMPLETE.md  PHASE_BASED_TESTING.md  PLANNING_DOC_TESTS_EXECUTED.md  PROJECT_COMPLETE.md  README.md  RELEASE_PREPARATION_COMPLETE.md  RELEASE_V0.1.0_EXECUTED.md  REPOSITORY_FULLY_SYNCHRONIZED.md  ROADMAP_SUMMARY.md  SESSION_TEST_FIXES_COMPLETE.md  SESSION_TODO_RESOLUTION.md  TRAINING_WORKING.md  build.rs  compare_loss.py  rustane_colab_demo.py  rustane_colab_notebook.md
.cargo/: config.toml
.claude/: ralph-loop.local.md
.github/: DEVELOPMENT.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.serena/: project.yml
docs/: ANE_BACKWARD_LIMITATION.md  ANE_BACKWARD_TEST_RESULTS.md  ANE_COMPILATION_FIX.md  ANE_CPU_ROUTING.md  ANE_FAILURE_REPORT.md  ANE_FIXES_SUMMARY.md  ANE_IOSURFACE_BEST_PRACTICES.md  ANE_KERNEL_CACHE.md  ANE_MEMORY_POOL.md  ANE_MIL_SYNTAX.md  ANE_MIL_WORKING_FORMAT.md  ANE_MULTI_INPUT_RESEARCH.md  ANE_OPERATOR_FUSION.md  ANE_OPTIMIZATION_OPPORTUNITIES.md  ANE_PEAK_VERIFICATION.md  ANE_PROFILER_GUIDE.md  ANE_SIZE_CONSTRAINTS.md  ANE_TRAINING_ARCHITECTURE.md  ANE_TRAINING_GUIDE.md  ANE_TRAINING_SYSTEM.md  ANE_USAGE_VERIFICATION.md  ATTENTION.md  COMPILE_LIMIT_MITIGATION.md  DPF_COMPILATION_ISSUE.md  GRADIENT_CHECKPOINTING.md  HWX_INTEGRATION.md  MEMORY_OPTIMIZATION.md  (+8 more)
(+417 files in other folders)
