[package]
name = "rustane"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"

# Memory-efficient profiles for development
[profile.dev]
debug = 1       # Less debug info = less memory
opt-level = 1   # Some optimization reduces runtime memory

[profile.test]
debug = 1
opt-level = 1

[profile.release]
debug = false
lto = "thin"    # Faster linking, less memory

[dependencies]
# High-level safe wrappers (added in later phases)
half = "2.4"
libc = "0.2"
objc2 = "0.6"
objc2-core-foundation = "0.3"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSData", "NSDictionary", "NSError", "NSValue", "NSString"] }
objc2-io-surface = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
sentencepiece-model = "0.1.4"

# Python bindings (optional, feature-gated)
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

[features]
default = []
python = ["pyo3/extension-module", "numpy"]

[dev-dependencies]
tempfile = "3.0"
